1. Added ModelMapper dependency to convert userDto to user entity , vice-versa; instead of manually writing logic of conversion 2. Updated service layer accordingly (UserServiceImpl)